--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -1,6 +1,6 @@
 {
-  "appname": "DevCenter",
+  "appname": "FedExDemoScenario3",
   "ocscope": "FullAccess",
-  "clientid": "0e0450e6-27a0-4093-a6b3-d7cd9ebc2b8f",
-  "buyerid": "451ORDERCLOUD"
+  "clientid": "6553b592-a425-461c-abc4-a3beae12a201",
+  "buyerid": "Consultant"
 }
