--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-ui-tree": "~2.10.0",
     "ordercloud-angular-sdk": "~1.0.3",
     "angular-ui-grid": "~3.0.7",
-    "ordercloud-ng-sdk": "~1.0.1"
+    "ordercloud-ng-sdk": "~1.0.1",
+    "chance": "~0.8.0"
   }
 }
